sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
	var i = 1
	var gnome = false
	while (!gnome) {
		if (plusPetit(i,i-1)) {
			echange(i,i-1)
			i-=1
		} else {
			i+=1
		}
		if ((i=getNombreValeurs-1) && (plusPetit(i-1,i))) {
			gnome = true
		}
	}
}
